Fixed up spacing and styling.

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -1075,11 +1075,9 @@ p-inputswitch.ng-dirty.ng-invalid > .p-inputswitch {
   width: 90%;
 }
 
-#windowSizeSelector {
-  .p-inputtext {
-    border: 1px solid #ced4da;
-    border-radius: 3px;
-  }
+
+#temporalWindowSizeSelector{
+  height: 2.5rem;
 }
 
 #overlapSelector .p-inputtext{
